# wslog

./: .gitignore  .project  Makefile  Makefile.am  README.md  configure.ac  convert.c  convert.h  fetch.c  main.c  serial.c  ws2300.c  ws2300.h
docs/: Makefile.am  vantage.txt  wslogd.conf.txt  wslogd.txt
src/: Makefile  Makefile.am  Makefile.master  decoder.c  decoder.h  history.c  history.h  include.mk  main.c  serial.c  serial.h  util.c  util.h  ws2300.c  ws2300.h  wunder.c  wunder.h
src/cmd/: Makefile  Makefile.am  Makefile.cmd  Makefile.targ
src/cmd/ws23xx/: Makefile  Makefile.am  decoder.c  history.c  main.c  serial.c  serial.h  util.c  ws2300.c  ws2300.h  wunder.c  wunder.h
src/cmd/wslogd/: Makefile  Makefile.am  board.c  board.h  conf.c  conf.h  csv.c  csv.h  daemon.c  daemon.h  dataset.c  dataset.h  main.c  sqlite.c  sqlite.h  worker.c  worker.h  ws23xx.c  ws23xx.h  wslogc.c  wslogd.c  wslogd.conf  wslogd.h  wunder.c  wunder.h
src/cmd/wslogd/db/: sqlite.c  sqlite.h
src/cmd/wslogd/driver/: driver.c  driver.h  simu.c  simu.h  ws23xx.c  ws23xx.h
src/cmd/wslogd/service/: archive.c  sensor.c  service.h  util.c  util.h
src/common/defs/: dso.h  std.h
src/core/: bitfield.c  nybble.c  nybble.h
src/lib/: Makefile  Makefile.am  Makefile.lib  Makefile.targ
src/lib/libws/: Makefile  Makefile.am  aggregate.c  bitfield.c  conf.c  conf.h  err.c  err.h  log.h  nybble.c  serial.c  serial.h  util.c  util.h
src/lib/libws/ws23xx/: archive.c  archive.h  decoder.c  decoder.h  ws23xx.c  ws23xx.h
src/libws/: Makefile.am  aggregate.c  aggregate.h  bitfield.c  bitfield.h  cli.c  cli.h  conf.c  conf.h  crc_ccitt.c  crc_ccitt.h  nybble.c  nybble.h  serial.c  serial.h  util.c  util.h
src/libws/vantage/: clearing.c  config.c  current.c  download.c  eeprom.c  serial.c  testing.c  unit.c  util.c  util.h  vantage.h
src/libws/ws23xx/: archive.c  archive.h  decoder.c  decoder.h  ws23xx.c  ws23xx.h
src/vantage/: Makefile.am  main.c  vantage.1
src/ws23xx/: Makefile.am  main.c  util.c  util.h  ws23xx.c
src/wslog/: Makefile.am  builtin.h  ic-omm.c  wslog.c
src/wslogd/: Makefile.am  board.c  board.h  conf.c  conf.h  curl.c  curl.h  daemon.c  dataset.c  dataset.h  sqlite.sql  worker.c  worker.h  wslogc.c  wslogd.1  wslogd.c  wslogd.conf  wslogd.conf.5  wslogd.h  wsview.c  wsview.h  wunder.c  wunder.h
src/wslogd/db/: sqlite.c  sqlite.h
src/wslogd/driver/: driver.c  driver.h  simu.c  simu.h  vantage.c  vantage.h  virt.c  virt.h  ws23xx.c  ws23xx.h
src/wslogd/service/: archive.c  archive.h  ic.c  ic.h  sensor.c  sensor.h  socket.c  socket.h  stat_ic.c  stat_ic.h  sync.c  sync.h  util.c  util.h  wunder.c  wunder.h
src/wsview/: Makefile.am  wslog  wsview.c
src/wsview/cgi-bin/: wsview
src/wsview/lib/: current.lua  summary.lua  util.lua
src/wsview/wsview/: archive.lua  charts.lua  climate.lua  current.lua  graphics.lua  home.lua  http.lua  i18n.lua  month.lua  rest.lua  summary.lua  template.lua  util.lua
src/wsview/wsview-static/: wsview.css  wsview.js
src/wsview/wsview/climate/: year.lua
src/wsview/wsview/rest/: aggregate.lua
src/wsview/wsview/sgi/: cgi.lua  uhttpd.lua
systemd/system/: wslogd.service.in
tests/: Makefile  Makefile.am  check.c  check_aggregate.c  check_cli.c  check_crc_ccitt.c  check_nybble.c  check_util.c  check_vantage.c  suites.h
