lib_LTLIBRARIES = libws.la

libws_la_SOURCES = \
	bitfield.c \
	conf.c \
	err.c \
	nybble.c \
	util.c \
	serial.c \
	ws23xx/archive.c \
	ws23xx/decoder.c \
	ws23xx/ws23xx.c \
	bitfield.h \
	conf.h \
	err.h \
	nybble.h \
	util.h \
	serial.h \
	ws23xx/archive.h \
	ws23xx/decoder.h \
	ws23xx/ws23xx.h

libws_la_CFLAGS = \
	-I../../common -I..

libws_la_LIBADD = \
	-lm
